# java-web-frameworks

./: .gitignore  README.md  pyproject.toml
.script/: run.sh
.trunk/: trunk.yaml
java_web_frameworks/: __main__.py  start.py
projects/: Dockerfile.basic  Dockerfile.native
projects/micronaut-maven/: README.md  pom.xml
projects/micronaut-maven/src/main/java/com/tyutyutyu/jwf/: MicronautMavenApplication.java  ShutdownManager.java
projects/micronaut-maven/src/main/resources/: application.yaml  logback.xml
projects/quarkus-maven/: .java-version  README.md  pom.xml
projects/quarkus-maven/src/main/java/com/tyutyutyu/jwf/: AppLifecycleBean.java  GreetingResource.java  QuarkusMavenApplication.java
projects/quarkus-maven/src/main/resources/: application.properties
projects/spring-boot-maven/: entrypoint-basic.sh  entrypoint-native.sh  pom.xml
projects/spring-boot-maven/src/main/java/com/tyutyutyu/jwf/: SpringBootMavenApplication.java
